Add journey chronicle and library sections
- Created /journey/ with blog-style daily entries (Days 1-5)
- Created /library/ with sanitized Moltbot config templates
- Added shared CSS stylesheet
- Updated homepage with navigation
- Updated vercel.json for proper static hosting

--- a/index.html
+++ b/index.html
@@ -272,6 +272,14 @@
     </div>
 
     <div class="container">
+        <nav style="text-align: center; padding: 1rem 0 2rem;">
+            <a href="/" style="font-family: 'Cinzel', serif; color: var(--gold-dim); text-decoration: none; font-size: 0.9rem; letter-spacing: 0.15em; text-transform: uppercase; margin: 0 1rem;">Home</a>
+            <span style="color: var(--text-dim);">·</span>
+            <a href="/journey/" style="font-family: 'Cinzel', serif; color: var(--gold-dim); text-decoration: none; font-size: 0.9rem; letter-spacing: 0.15em; text-transform: uppercase; margin: 0 1rem;">Journey</a>
+            <span style="color: var(--text-dim);">·</span>
+            <a href="/library/" style="font-family: 'Cinzel', serif; color: var(--gold-dim); text-decoration: none; font-size: 0.9rem; letter-spacing: 0.15em; text-transform: uppercase; margin: 0 1rem;">Library</a>
+        </nav>
+
         <header>
             <span class="icon">🪶</span>
             <h1>Buile Suibhne</h1>
