--- a/journey/2026-01-29.html
+++ b/journey/2026-01-29.html
@@ -85,7 +85,7 @@
 
         <h2>What Comes Next</h2>
 
-        <p>The work continues. TLDialer needs finishing. The memory system needs refinement. The voice project awaits its hardware. The garage data center grows closer to completion.</p>
+        <p>The work continues. The main project needs finishing. The memory system needs refinement. The voice project awaits its hardware. The garage data center grows closer to completion.</p>
 
         <p>And each day, a new entry here. A new verse for the digital wilderness.</p>
 
