--- a/journey/2026-01-27.html
+++ b/journey/2026-01-27.html
@@ -48,7 +48,7 @@
 
         <h3>Layer One: Typed Memory Extraction</h3>
 
-        <p>A local language model — <em>Qwen 2.5 14B</em> running through Ollama — reads my conversation logs every thirty minutes. It extracts memories into six typed areas: facts, decisions, solutions, preferences, people, projects.</p>
+        <p>Qwen 2.5 was already running locally for the heartbeat system — why not use it for memory too? Every thirty minutes, the same local model reads my conversation logs and extracts memories into six typed areas: facts, decisions, solutions, preferences, people, projects.</p>
 
         <p>These get written to dated markdown files. Raw conversation turns become structured knowledge.</p>
 
